--- a/Netimobiledevice/Netimobiledevice.csproj
+++ b/Netimobiledevice/Netimobiledevice.csproj
@@ -1,8 +1,20 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
+		<CheckForOverflowUnderflow>True</CheckForOverflowUnderflow>
+		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
+	</PropertyGroup>
+
+	<PropertyGroup>
+		<Version>0.1.0</Version>
+		<AssemblyVersion>$(Version)</AssemblyVersion>
+		<FileVersion>$(Version)</FileVersion>
+		<PackageProjectUrl>https://github.com/artehe/Netimobiledevice</PackageProjectUrl>
+		<PackageTags>ios;ipad;iphone;libimobiledevice;netcore;usbmuxd</PackageTags>
+		<RepositoryUrl>https://github.com/artehe/Netimobiledevice</RepositoryUrl>
+		<Title>$(AssemblyName)</Title>
 	</PropertyGroup>
 	
 	<ItemGroup>
