--- a/Netimobiledevice/Netimobiledevice.csproj
+++ b/Netimobiledevice/Netimobiledevice.csproj
@@ -8,15 +8,21 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<Version>0.1.1</Version>
+		<Version>0.1.2</Version>
 		<AssemblyVersion>$(Version)</AssemblyVersion>
 		<FileVersion>$(Version)</FileVersion>
+		<PackageLicenseFile>LICENSE</PackageLicenseFile>
 		<PackageProjectUrl>https://github.com/artehe/Netimobiledevice</PackageProjectUrl>
 		<PackageTags>ios;ipad;iphone;libimobiledevice;netcore;usbmuxd</PackageTags>
 		<RepositoryUrl>https://github.com/artehe/Netimobiledevice</RepositoryUrl>
+		<RepositoryType>git</RepositoryType>
 		<Title>$(AssemblyName)</Title>
 		<Description>Pure .Net Core implementation for working with iOS devices (iPhone, iPad, iPod).</Description>
 	</PropertyGroup>
+
+	<ItemGroup>
+		<None Include="..\LICENSE" Pack="true" PackagePath=""/>
+	</ItemGroup>
 	
 	<ItemGroup>
 		<InternalsVisibleTo Include="NetimobiledeviceTest" />
