--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -35,6 +35,7 @@ jobs:
     - name: PublishNuget
       run: dotnet nuget push "**/*.nupkg" --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.PUBLISH_TO_NUGET }} --skip-duplicate
     - name: PublishGithub
-      run: dotnet nuget push "**/*.nupkg" --source "github" --api-key ${{ secrets.PUBLISH_TO_GITHUB }} --skip-duplicate
+      run: dotnet nuget add source --username artehe --password ${{ secrets.PUBLISH_TO_GITHUB }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/artehe/index.json"
+           dotnet nuget push "**/*.nupkg" --source "github" --api-key ${{ secrets.PUBLISH_TO_GITHUB }} --skip-duplicate
       env:
         NUGET_AUTH_TOKEN: ${{ github.token }}
