--- a/.editorconfig
+++ b/.editorconfig
@@ -271,3 +271,4 @@ dotnet_diagnostic.CA1863.severity = suggestion
 dotnet_diagnostic.CA1304.severity = suggestion
 dotnet_diagnostic.CA1305.severity = suggestion
 dotnet_diagnostic.CA1310.severity = suggestion
+dotnet_diagnostic.CA2201.severity = suggestion
