Initial test implementation

--- a/NetimobiledeviceDemo/NetimobiledeviceDemo.csproj
+++ b/NetimobiledeviceDemo/NetimobiledeviceDemo.csproj
@@ -5,6 +5,11 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+	
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Netimobiledevice\Netimobiledevice.csproj" />
