--- a/.editorconfig
+++ b/.editorconfig
@@ -265,7 +265,7 @@ dotnet_style_qualification_for_event = false:silent
 dotnet_diagnostic.CA1835.severity = suggestion
 dotnet_style_prefer_collection_expression = true:suggestion
 dotnet_diagnostic.CA1838.severity = suggestion
-dotnet_diagnostic.CA1848.severity = suggestion
+dotnet_diagnostic.CA1848.severity = silent
 dotnet_diagnostic.CA1852.severity = suggestion
 dotnet_diagnostic.CA1863.severity = suggestion
 dotnet_diagnostic.CA1304.severity = warning
