--- a/Netimobiledevice/Netimobiledevice.csproj
+++ b/Netimobiledevice/Netimobiledevice.csproj
@@ -1,5 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
+		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 		<CheckForOverflowUnderflow>False</CheckForOverflowUnderflow>
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 		<EnableTrimAnalyzer>true</EnableTrimAnalyzer>
@@ -34,10 +35,7 @@
 	
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.2" />
+		<PackageReference Include="Unofficial.WinTun" Version="0.14.1.3" />
 		<PackageReference Include="Zeroconf" Version="3.6.11" />
-	</ItemGroup>
-	
-	<ItemGroup>
-	  <ProjectReference Include="..\UniversalTunTapDriver\UniversalTunTapDriver.csproj" />
 	</ItemGroup>
 </Project>
