--- a/NetimobiledeviceTest/NetimobiledeviceTest.csproj
+++ b/NetimobiledeviceTest/NetimobiledeviceTest.csproj
@@ -8,6 +8,7 @@
 	
   <ItemGroup>
     <EmbeddedResource Include="TestFiles\*.plist" />
+	  <EmbeddedResource Include="TestFiles\*.bin" />
   </ItemGroup>
 
   <ItemGroup>
