--- a/Netimobiledevice/Netimobiledevice.csproj
+++ b/Netimobiledevice/Netimobiledevice.csproj
@@ -22,7 +22,7 @@
 		<RepositoryUrl>https://github.com/artehe/Netimobiledevice</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
 		<Title>$(AssemblyName)</Title>
-		<Version>2.6.2</Version>
+		<Version>2.6.0</Version>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -36,7 +36,7 @@
 	
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.7" />
-		<PackageReference Include="NetWintun" Version="0.0.1-13" />
+		<PackageReference Include="NetWintun" Version="1.0.1" />
 		<PackageReference Include="Zeroconf" Version="3.7.16" />
 	</ItemGroup>
 </Project>
