--- a/.editorconfig
+++ b/.editorconfig
@@ -227,10 +227,18 @@ dotnet_diagnostic.CA1805.severity = suggestion
 dotnet_diagnostic.CA1309.severity = warning
 dotnet_diagnostic.CA1311.severity = warning
 csharp_prefer_system_threading_lock = true:suggestion
+csharp_style_allow_blank_line_after_token_in_conditional_expression_experimental = true:silent
+csharp_style_allow_blank_line_after_token_in_arrow_expression_clause_experimental = true:silent
+csharp_style_prefer_implicitly_typed_lambda_expression = true:suggestion
+csharp_style_prefer_unbound_generic_type_in_nameof = true:suggestion
+csharp_style_prefer_utf8_string_literals = true:suggestion
+csharp_prefer_static_anonymous_function = true:suggestion
+csharp_style_prefer_readonly_struct = true:suggestion
+csharp_style_prefer_readonly_struct_member = true:suggestion
 
 [*.{cs,vb}]
 end_of_line= crlf
-dotnet_style_operator_placement_when_wrapping = beginning_of_line
+dotnet_style_operator_placement_when_wrapping = end_of_line
 tab_width = 4
 indent_size = 4
 dotnet_style_coalesce_expression = true:suggestion
@@ -264,7 +272,7 @@ dotnet_style_qualification_for_property = false:silent
 dotnet_style_qualification_for_method = false:silent
 dotnet_style_qualification_for_event = false:silent
 dotnet_diagnostic.CA1835.severity = suggestion
-dotnet_style_prefer_collection_expression = true:suggestion
+dotnet_style_prefer_collection_expression = when_types_exactly_match:suggestion
 dotnet_diagnostic.CA1838.severity = suggestion
 dotnet_diagnostic.CA1848.severity = silent
 dotnet_diagnostic.CA1852.severity = suggestion
