--- a/Netimobiledevice/Netimobiledevice.csproj
+++ b/Netimobiledevice/Netimobiledevice.csproj
@@ -50,8 +50,8 @@
 	</ItemGroup>
 	
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.8" />
-		<PackageReference Include="NetWintun" Version="1.0.1" />
-		<PackageReference Include="Zeroconf" Version="3.7.16" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
+		<PackageReference Include="NetWintun" />
+		<PackageReference Include="Zeroconf" />
 	</ItemGroup>
 </Project>
