--- a/NetimobiledeviceDemo/NetimobiledeviceDemo.csproj
+++ b/NetimobiledeviceDemo/NetimobiledeviceDemo.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 	
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.8" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.8" />
+    <PackageReference Include="Microsoft.Extensions.Logging" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" />
   </ItemGroup>
 
   <ItemGroup>
