--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,7 @@
 
 version: 2
 updates:
-  - package-ecosystem: "dotnet-sdk"
+  - package-ecosystem: "nuget"
     directory: "/"
     schedule:
       interval: "weekly"
